src/test/test-models/bad/declare-define-var-int-2.stan
data {
  real a1;
}
transformed data {
  int td_a1 = 4.1;
}
